# Age-Decoupled-SurrealGAN

./: .gitignore  README.md  pyproject.toml
docs/: apr2026_project_overview.md  datasets_and_splits.md  metrics_and_logging.md  model_architecture.md  model_selection_and_experiment_flow.md  objectives_and_losses.md  pipeline_usage.md  scenario_matrix.md  slurm_workflows.md
output/jupyter-notebook/: cleaned-istaging-eda-and-split-design.ipynb
scripts/: run_laptop_experiments.sh  run_overnight_laptop.sh
scripts/slurm/: config_list.txt  model_selection_configs.txt  model_selection_select.sh  model_selection_train_best_array.sh  model_selection_tune_array.sh  prepare_data.sh  prepare_data.slurm  quickstart.sh  quickstart.slurm  submit_all_scenarios.sh  submit_model_selection_pipeline.sh  submit_model_selection_repeats.sh  submit_model_selection_tune.sh  submit_train_scenarios.sh  submit_tune_scenarios.sh  train.sh  train.slurm  train_array.sh  train_array.slurm  train_scenarios.txt  tune.sh  tune.slurm  tune_array.sh  tune_scenarios.txt
src/age_decoupled_surrealgan/: __init__.py  analysis_artifacts.py  cli.py  config.py  evaluation.py  inference.py  legacy_model.py  losses.py  metrics.py  model.py  reporting.py  selection.py  trainer.py  tuning.py  utils.py
src/age_decoupled_surrealgan/api/: __init__.py  app.py
src/age_decoupled_surrealgan/configs/: default.toml  quickstart.toml  (+6 more)
tests/: test_losses.py  test_metrics.py  test_model.py  test_prepare.py
webui/: index.html  package-lock.json  package.json  vite.config.ts
webui/src/: App.tsx  main.tsx  styles.css
(+45 files in other folders)
