[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "age-decoupled-surrealgan"
version = "0.1.0"
description = "Age-decoupled SurrealGAN research pipeline for ROI-based brain aging and disease-process analysis"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "George Aidinis" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "torch>=2.2",
  "tensorboard>=2.15",
  "matplotlib>=3.8",
  "nibabel>=5.2",
  "nilearn>=0.10",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "optuna>=3.6"
]

[project.optional-dependencies]
dev = [
  "black>=24.3",
  "mypy>=1.9",
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.3"
]

[project.scripts]
age-surrealgan = "age_decoupled_surrealgan.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
age_decoupled_surrealgan = ["configs/*.toml"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
